feat: add Swagger configuration and enhance security & user management
- Added SwaggerConfig for API documentation
- Updated SecurityConfig for JWT and role-based access
- Enhanced AuthServiceImpl with refresh token rotation and logout
- Updated User entity and UserRequest DTO to include role
- Updated controllers (UserController, BudgetController) for role support
- Minor updates to README